Moved more variables in .env

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VUE_APP_KEYCLOAK_CLIENT_ID=ToDo-FrontEnd
+VUE_APP_API_HOST=http://192.168.30.100:8000
+VUE_APP_KEYCLOAK_HOST=http://192.168.10.3:8080
